-- v0.5.0 --
* *Enum::toInt() is now standard.
* exceptions thrown by library are slightly more verbose now.
* updated Auto* classes to allow "regular" copying as atuo_ptr<> does, in all situations.
* fixed resource leaks in ssignemnt for AutoVariable.
* providede Backtrace for clearting stack backtraces (usefull for exceptions).
* added Exceptions::* for creating own exceptions easily.

-- v0.4.3 --
* fixed convention in Exception.
* begin(), end(), size() are now static.
* fixed warning in assert in IterableEnum<> on some compilers.
* build_process v0.6.0 introduced.
* removed extra link reference to boost::threads.