@@ -1,3 +1,6 @@
+-- v?.?.? --
+* likely.hpp implements compiler huristics for branches.
+
 -- v0.5.0 --
 * *Enum::toInt() is now standard.
 * exceptions thrown by library are slightly more verbose now.
